<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Week10Lab">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="WEEK #10"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="10dp"
            android:fontFamily="sans-serif-condensed"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/back_rect">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="Problem #1"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="10dp"
            android:fontFamily="sans-serif-condensed"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prob10"
            android:padding="20dp"
            android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/back_rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prob10_2"
                android:padding="20dp"
                android:textColor="@color/colorPrimary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/header"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="HEADER"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"
                        android:fontFamily="sans-serif-condensed"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prob10_p1"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:textColor="#32515e"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/footer"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="FOOTER"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"
                        android:fontFamily="sans-serif-condensed"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prob10_p2"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:textColor="#32515e"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/content"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="CONTENT"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"
                        android:fontFamily="sans-serif-condensed"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prob10_p3"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:textColor="#32515e"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/menu"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="MENU"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"
                        android:fontFamily="sans-serif-condensed"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prob10_p4"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:textColor="#32515e"
                        android:paddingBottom="20dp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="The Content division of the different pages should be as under:"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_l"
            android:text="@string/prob10_p5"
            android:padding="20dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_r"
            android:text="@string/prob10_p6"
            android:padding="20dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_l"
            android:text="@string/prob10_p7"
            android:padding="20dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_r"
            android:text="@string/prob10_p8"
            android:padding="20dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>
    </RelativeLayout>
    </ScrollView>
    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
</RelativeLayout>