<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Week13Lab">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lab13weekdetailsfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="Sample text"/>
        <TextView
            android:id="@+id/problem_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="Sample text"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="Sample text"/>
        <TextView
            android:id="@+id/text_field_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_l"
            android:text="@string/prob10_p5"
            android:padding="20dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/text_field_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_r"
            android:text="@string/prob10_p6"
            android:padding="20dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/text_field_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_l"
            android:text="@string/prob10_p7"
            android:padding="20dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/text_field_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_r"
            android:text="@string/prob10_p8"
            android:padding="20dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/text_field_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_l"
            android:text="@string/prob10_p7"
            android:padding="20dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/text_field_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_r"
            android:text="@string/prob10_p8"
            android:padding="20dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    </ScrollView>
    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
</RelativeLayout>